[tool.poetry]
name = "fixed-width"
version = "0.2.0"
description = "Working with fixed width types."
authors = ["supakeen <cmdr@supakeen.com>"]
license = "MIT"
readme = "README.rst"
keywords = ["fixed"]
repository = "https://github.com/supakeen/fixed-width"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
]

[tool.poetry.dependencies]
python = ">=3.6,<4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
coverage = "^4.5"
black = { version = "*", allow-prereleases = true }
pytest-cov = "^2.8"
pre-commit = "^1.20"
flake8 = "^3.7"
mypy = "^0.740.0"

[tool.black]
line-length = 80
target_version = ["py36"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.eggs
  | \.mypy_cache
  | \.tox
  | venv
  | _build
  | buck-out
  | build
  | dist
)/
'''

[build-system]
requires = ["setuptools", "wheel"]

